Wrong margin top in grid context fixed

--- a/src/components/atoms/Subtitle/Subtitle.scss
+++ b/src/components/atoms/Subtitle/Subtitle.scss
@@ -21,6 +21,7 @@
 
 .article-card__link {
   .article__subtitle {
+    margin-top: -.5rem;
     padding-left: 1rem;
   }
 }
